# streamrss

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  server-entrypoint.sh  worker-entrypoint.sh
alembic/: env.py
alembic/versions/: 02e1086149a8_add_rules_table.py  ffa6bcfa731a_add_rules_table.py
scripts/: producer.py
streamrss/: main.py
streamrss/cli/: __init__.py  rules.py  stream.py
streamrss/feeds/: __init__.py  base.py  blockworks.py  decrypt.py  feed_handler.py  feeds.py  utils.py
streamrss/server/: app.py  crud.py  models.py  schema.py  schemas.py
