[tool.poetry]
name = "rss-feed-streamer"
version = "0.1.0"
description = "RSS feed streamer"
authors = ["0xPeterSatoshi <0xpetersatoshi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
sseclient = "^0.0.27"
click = "^8.1.3"
fastapi = {extras = ["all"], version = "^0.79.0"}
sse-starlette = "^0.10.3"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
